# etl_api_bitcoin

./: README  README.md  bitcoin_json  pyproject.toml
exemplos/: exemplo1.py  exemplo2.py  exemplo3.py
src/: pipeline00.py
