
[project]
name = "etl_bitcoin"  # Corrigido
version = "0.1.0"
description = ""
authors = [
    {name = "Ludovina Magalhaes", email = "166879716+lagmagalhaes@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.12.6"
dependencies = ["requests (>=2.32.3,<3.0.0)", "tinydb (>=4.8.2,<5.0.0)", "psycopg2 (>=2.9.10,<3.0.0)", "python-dotenv (>=1.0.1,<2.0.0)"]

[tool.poetry]
packages = [{include = "etl_bitcoin"}]  # Corrigido

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
